started shape calculator

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     
         <h2>JavaScript Projects</h2>
         <p>Stay tuned for exciting projects and demonstrations of my JavaScript skills!</p>
+	<a href="shape_calculator/shape_calc.html">Shape Calculator</a>
     
     <p>copy@ copyright 2025 bishwajeet .All righr reserved.</p>
 </body>
